fix(server): 关闭 Wave 1–8 审计的权限、口径与密钥缺陷
- 2A 缺口预览：@SaCheckPermission 改 SaMode.AND（采购需求查看权 AND 库存余额查看权），
  聚合接口不再成为绕过库存领域权限的旁路；派生列改名 stockComparisonGap 并注明「不是净采购建议」
- 2A 预留口径：本批订单自身的 ACTIVE 预留不再当成不可用库存，缺口虚增已修正（纯 NUMERIC 计算）
- Wave 1：新增 V49 把主图收敛为 is_primary 单一事实（image_type 改 GALLERY/DETAIL，
  降级重复主图后建每 SPU 至多一张主图的唯一索引）；不改任何历史已应用迁移
- Wave 1：Excel 导入补 UPDATE 语义（模板版本 + 四个定位键、空白列保原值、(清空) 仅限六列、
  行版本冲突整批 40921 零写入），UPDATE 与更新模板下载额外要求 scm:product:update
- Wave 5：按客户正式打印改为线路锁内按当前 ACTIVE 订单重新聚合判定，零选择 + ALL 与空清单一律拒绝
- Wave 6：盘点快照签名密钥在 pre/prod 缺失或仍等于公开默认值即启动期失败，四份 application.yaml 显式声明配置键
- Wave 4/8：新增 MessageTypeEnum 业务类型供消息跳转；操作日志读权限白名单收敛到 OperateLogBusinessType，
  并在序列化出口按字段名递归脱敏 password/token/secret（库里存的即脱敏值）
- 测试：新增权限交集、快照密钥、并发打印、批量少收回滚、UPDATE 导入真实库 IT 等；全量回归 884 通过 / 0 失败 / 5 跳过